package com.example.homework.Strategy_pattern;

public interface DiscountStrategy {
    double calculateDiscount(double price);
}

